# numeric-systems-cpp

./: .gitignore  CMakeLists.txt  ChangingNumberSystems.sln  README.md
ChangingNumberSystems/: CMakeLists.txt  ChangingNumberSystems.cpp  ChangingNumberSystems.vcxproj  ChangingNumberSystems.vcxproj.filters  calculator.cpp  calculator.hpp  file.txt  log.cpp  log.hpp  log.txt  options.cpp  options.hpp  options.txt  translation.txt  ui.cpp  ui.hpp
